<resources>
    <string name="app_name">lab02</string>

    <string name="a">a:</string>
    <string name="b">b:</string>

    <string name="add">add</string>
    <string name="sub">sub</string>
    <string name="mul">mul</string>
    <string name="div">div</string>
    <string name="res">res=</string>

    <string name="sin">sin</string>
    <string name="cos">cos</string>

    <string name="sqrt">sqrt</string>
    <string name="pow">pow</string>
</resources>